Nova version with map score 0.3238